added textview container boxes

--- a/app/src/main/res/layout/port.xml
+++ b/app/src/main/res/layout/port.xml
@@ -6,105 +6,259 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="182dp"
-        android:layout_height="404dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="77dp"
+        android:layout_height="350dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
+        android:layout_marginTop="25dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.84">
+        app:layout_constraintTop_toBottomOf="@+id/textView9">
 
         <TextView
-            android:id="@+id/textView37"
+            android:id="@+id/GoodI"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView47"
+            android:id="@+id/GoodII"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView48"
+            android:id="@+id/GoodIII"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView49"
+            android:id="@+id/GoodIV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView50"
+            android:id="@+id/GoodV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView51"
+            android:id="@+id/GoodVI"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView52"
+            android:id="@+id/GoodVII"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView53"
+            android:id="@+id/GoodVIII"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/textView54"
+            android:id="@+id/GoodIX"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
 
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayoutII"
+        android:layout_width="77dp"
+        android:layout_height="350dp"
+        android:layout_marginTop="24dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/textView10">
+
         <TextView
-            android:id="@+id/textView55"
+            android:id="@+id/priceI"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:text="TextView"
             android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/priceII"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/priceIII"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/priceIV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/priceV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/priceVI"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/priceVII"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/priceVIII"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/priceIX"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayoutIII"
+        android:layout_width="77dp"
+        android:layout_height="350dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
+        app:layout_constraintStart_toEndOf="@+id/linearLayoutII"
+        app:layout_constraintTop_toBottomOf="@+id/textView11">
+
+        <TextView
+            android:id="@+id/quantityI"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/quantityII"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/quantityIII"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/quantityIV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/quantityV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/quantityVI"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/quantityVII"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/quantityVIII"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/quantityIX"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="18dp" />
+
 
     </LinearLayout>
 
@@ -114,25 +268,22 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="9dp"
         android:text="Repair Ship: cost TODO"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <Button
         android:id="@+id/repair_button"
         android:layout_width="90dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="47dp"
-        android:layout_marginRight="47dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="75dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginRight="52dp"
         android:text="Repair"
+        app:layout_constraintBottom_toTopOf="@+id/refuel_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.934"
-        app:layout_constraintStart_toEndOf="@+id/port_repair"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -141,7 +292,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="12dp"
         android:text="Refuel Ship: cost TODO"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/refuel_button"
@@ -152,90 +303,167 @@
     <Button
         android:id="@+id/refuel_button"
         android:layout_width="88dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="92dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="81dp"
+        android:layout_marginLeft="81dp"
         android:layout_marginEnd="52dp"
         android:layout_marginRight="52dp"
         android:text="Refuel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/port_refuel"
+        app:layout_constraintTop_toBottomOf="@+id/repair_button" />
 
-    <android.support.constraint.Constraints
-        android:id="@+id/constraints"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="110dp"
-        android:layout_height="404dp"
+        android:layout_height="350dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.839">
+        app:layout_constraintTop_toBottomOf="@+id/refuel_button">
 
         <Button
-            android:id="@+id/button41"
+            android:id="@+id/tradeButton1"
             android:layout_width="match_parent"
             android:layout_height="37.9dp"
-            android:text="Button" />
+            android:text="Trade" />
 
         <Button
-            android:id="@+id/button42"
+            android:id="@+id/tradeButton2"
             android:layout_width="match_parent"
             android:layout_height="37.9dp"
-            android:text="Button" />
+            android:text="Trade" />
 
         <Button
-            android:id="@+id/button39"
+            android:id="@+id/tradeButton3"
             android:layout_width="match_parent"
             android:layout_height="37.9dp"
-            android:text="Button" />
+            android:text="Trade" />
 
         <Button
-            android:id="@+id/button40"
+            android:id="@+id/tradeButton4"
             android:layout_width="match_parent"
             android:layout_height="37.9dp"
-            android:text="Button" />
+            android:text="Trade" />
 
         <Button
-            android:id="@+id/button37"
+            android:id="@+id/tradeButton5"
             android:layout_width="match_parent"
             android:layout_height="37.9dp"
-            android:text="Button" />
+            android:text="Trade" />
 
         <Button
-            android:id="@+id/button38"
+            android:id="@+id/tradeButton6"
             android:layout_width="match_parent"
             android:layout_height="37.9dp"
-            android:text="Button" />
+            android:text="Trade" />
 
         <Button
-            android:id="@+id/button35"
+            android:id="@+id/tradeButton7"
             android:layout_width="match_parent"
-            android:layout_height="37.9dp"
-            android:text="Button" />
+            android:layout_height="36dp"
+            android:text="Trade" />
 
         <Button
-            android:id="@+id/button36"
+            android:id="@+id/tradeButton8"
             android:layout_width="match_parent"
             android:layout_height="37.9dp"
-            android:text="Button" />
+            android:text="Trade" />
 
         <Button
-            android:id="@+id/button34"
+            android:id="@+id/tradeButton9"
             android:layout_width="match_parent"
             android:layout_height="37.9dp"
-            android:text="Button" />
+            android:text="Trade" />
 
-        <Button
-            android:id="@+id/button24"
-            android:layout_width="match_parent"
-            android:layout_height="37.9dp"
-            android:text="Button" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="327dp"
+        android:layout_marginRight="327dp"
+        android:text="Goods"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/port_refuel" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="482dp"
+        android:text="Price"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toBottomOf="@+id/port_refuel"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="176dp"
+        android:layout_marginRight="176dp"
+        android:text="Quantity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/port_refuel" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
+        android:text="Region"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/currentRegionTrade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:text="placeholder"
+        app:layout_constraintStart_toEndOf="@+id/textView12"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
+        android:text="Current Radical Event:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
+    <TextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="51dp"
+        android:text="placeholder"
+        app:layout_constraintStart_toEndOf="@+id/textView14"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
