--- a/app/src/main/res/layout/map.xml
+++ b/app/src/main/res/layout/map.xml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
+
 <GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:columnCount="1"
     >
+
     <TextView
         android:text="Map"
         android:textSize="32dip"
         android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:id="@+id/textView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="150dp"
+        android:layout_marginLeft="0dp"
+        android:text="Fuel Remaining:"
+        android:layout_row="0" />
+
+    <TextView
+        android:id="@+id/currentFuel"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_row="0"
+        android:layout_marginStart="180dp"
+        android:layout_marginLeft="20dp"
+        android:ems="10" />
 
     <LinearLayout
         android:layout_width="match_parent"
