--- a/app/src/main/res/layout/port.xml
+++ b/app/src/main/res/layout/port.xml
@@ -304,7 +304,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="9dp"
-        android:text="Repair Ship: cost TODO"
+        android:text="Repair Ship: 200"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
@@ -314,8 +314,8 @@
         android:layout_width="90dp"
         android:layout_height="35dp"
         android:layout_marginTop="75dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginRight="52dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:text="Repair"
         app:layout_constraintBottom_toTopOf="@+id/refuel_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -327,11 +327,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="12dp"
-        android:text="Refuel Ship: cost TODO"
+        android:layout_marginTop="16dp"
+        android:text="Refuel Ship: 100"
         android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/refuel_button"
-        app:layout_constraintHorizontal_bias="0.011"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/port_repair" />
 
@@ -339,13 +337,10 @@
         android:id="@+id/refuel_button"
         android:layout_width="88dp"
         android:layout_height="36dp"
-        android:layout_marginStart="81dp"
-        android:layout_marginLeft="81dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginRight="52dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:text="Refuel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/port_refuel"
         app:layout_constraintTop_toBottomOf="@+id/repair_button" />
 
 
