--- a/app/src/main/res/layout/trade.xml
+++ b/app/src/main/res/layout/trade.xml
@@ -117,12 +117,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="157dp"
         android:layout_marginRight="157dp"
         android:layout_marginBottom="25dp"
         android:text="The trade was successful!"
         android:textColor="#090"
+        android:visibility="invisible"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.107"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutII"
+        app:layout_constraintVertical_bias="0.460" />
+
+    <TextView
+        android:id="@+id/errorText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginRight="157dp"
+        android:layout_marginBottom="25dp"
+        android:text="There was an error with the trade."
+        android:textColor="#900"
         android:visibility="invisible"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
